plugins {
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

dependencies {
    /* --- Spring Boot starters --- */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    /* --- DB 드라이버 --- */
    runtimeOnly 'com.mysql:mysql-connector-j'

    /* --- Lombok (컴파일 시 애너테이션 처리) --- */
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    /* --- Actuator(선택) --- */
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    /* --- 테스트 (기본) --- */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    /* 추가 내용 */
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'  // JSON parsing (Jackson) 지원

}

tasks.named('test') {
    useJUnitPlatform()
}